apps/speed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speed
  namespace: speed
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: speed
  template:
    metadata:
      labels:
        app: speed
    spec:
      containers:
        - name: speed
          image: adolfintel/speedtest
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: database
              mountPath: /database
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: speed-database
